tests/snapshots/conformance_golden_suite__golden_mapping_fidelity_identity.snap
---
source: tests/conformance_golden_suite.rs
expression: "json!({ \"from\": \"claude\", \"to\": \"claude\", \"fidelity\": fidelity, })"
---
{
  "fidelity": "lossless",
  "from": "claude",
  "to": "claude"
}
