tests/snapshots/conformance_golden_suite__golden_policy_read_path_allowed.snap
---
source: tests/conformance_golden_suite.rs
expression: decision
---
{
  "allowed": true,
  "reason": null
}
