tests/snapshots/conformance_golden_suite__golden_policy_tool_denied_by_denylist.snap
---
source: tests/conformance_golden_suite.rs
expression: decision
---
{
  "allowed": false,
  "reason": "tool 'Bash' is disallowed"
}
