tests/snapshots/conformance_golden_suite__golden_policy_write_path_denied.snap
---
source: tests/conformance_golden_suite.rs
expression: decision
---
{
  "allowed": false,
  "reason": "write denied for '.git/config'"
}
