tests/snapshots/conformance_golden_suite__golden_translate_abp_to_kimi.snap
---
source: tests/conformance_golden_suite.rs
expression: result
---
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Refactor auth module\n\n--- instructions ---\nFocus on error handling",
      "role": "user"
    }
  ],
  "model": "gpt-4o"
}
